# loom

./: .env.example  .gitignore  CLAUDE.local.md  CLAUDE.md  LICENSE  README.md  alembic.ini  pyproject.toml
.claude/commands/: smoketest.md
.tickets/: loo-02sc.md  loo-09qa.md  loo-0pek.md  loo-0saj.md  loo-1e4u.md  loo-1edk.md  loo-1eu3.md  loo-1ft4.md  loo-1gab.md  loo-1gkc.md  loo-1h3o.md  loo-1put.md  loo-1pwe.md  loo-1szi.md  loo-1u6r.md  loo-1xem.md  loo-2c8x.md  loo-2d5u.md  loo-2fp4.md  loo-2lzh.md  loo-3k60.md  loo-3x90.md  loo-3yxj.md  loo-3yyd.md  loo-3zso.md  loo-46aj.md  loo-4nd5.md  loo-4oaa.md  loo-4ur6.md  loo-4w32.md  loo-57gh.md  loo-5834.md  loo-5fkq.md  loo-5fpu.md  loo-5mol.md  loo-5s8p.md  loo-5w9l.md  loo-5wvn.md  loo-5z56.md  loo-6300.md  (+152 more)
alembic/: env.py
alembic/versions/: 06150f5d6aff_add_beat_proposal.py  12173052e009_add_world_entries_table.py  (+29 more)
loom/: config.py  database.py  dependencies.py  dice.py  email.py  fortune_roll.py  main.py  models.py  notifications.py  rendering.py  voting.py  word_seeds.py
loom/ai/: client.py  (+4 more)
planning/: phase1-steps.md  phase2-steps.md  phase3-steps.md  requirements.md
tests/: conftest.py  test_acts.py  test_ai_context.py  test_auth.py  test_character_suggestions.py  test_characters.py  test_dice.py  test_email_notifications.py  test_fortune_roll.py  test_games.py  test_hello.py  test_models.py  test_notifications.py  test_npcs.py  test_oracles.py  test_relationships.py  test_safety_tools.py  test_scenes.py  test_session0.py  test_world_document.py  test_world_entries.py  test_world_entry_suggestions.py
(+45 files in other folders)
