[project]
name = "loom"
version = "0.1.0"
description = "Async-first collaborative GM-less tabletop roleplaying"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]",
    "jinja2",
    "python-multipart",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "alembic",
    "pydantic-settings",
    "anthropic",
    "itsdangerous>=2.2.0",
    "authlib>=1.6.8",
    "instructor>=1.14.5",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
